[package]
name = "yewtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
gloo = "0.8.0"
serde = "1.0.158"
serde_json = "1.0.94"
stylist = { version = "0.12.0", features = ["yew","parser"]}
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["HtmlInputElement"] }